z-order not working correctly on IOS

--- a/src/css/_lib.scss
+++ b/src/css/_lib.scss
@@ -18,7 +18,8 @@ $menu-radius: 14px;
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
-	z-index:99999;
+	z-index:9999;
+	-webkit-transform: translate3d(0,0,0); // fix ifruit z-index problems
 }
 @mixin screen-minus {
 	position: absolute;
